<resources>
    <string name="app_name">Upscale</string>

    <string name="loading">Loading</string>


    <string name="bluetooth_status">Bluetooth: </string>
    <string name="bluetooth_settings">C</string>
    <string name="bluetooth_retry">Retry</string>

    <string name="weight_default">Scale weight reading: not available</string>
    <string name="battery_default">Scale battery level: not available</string>

    <string name="start_text">Choose a recipe to begin</string>


    <string name="status_connect">connected</string>
    <string name="status_searching">searching...</string>
    <string name="status_error">error</string>
    <string name="status_disconnect">not connected</string>
    <string name="status_not_found">no scale found</string>
    <string name="status_found">scale found</string>
    <string name="status_disabled">disabled</string>
    <string name="status_location_disabled">location permission required</string>
    <string name="status_not_available">device not supported</string>

    <!-- Strings for recipe view -->

    <string name="button_cancel">Cancel</string>
    <string name="button_next_final">Finish Recipe</string>
    <string name="button_next">Next Step</string>
    <string name="button_last">Last Step</string>

    <!-- Strings for timer view -->
    <string name="timer_timer">00:00</string>
    <string name="timer_start_start">Start</string>
    <string name="timer_start_stop">Stop</string>
    <string name="timer_reset">Reset</string>
    <string name="weight_marker">                 ^</string>
    <string name="weight_tare">Tare scale</string>

</resources>
