<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mich1eal.upscale.activity.Scale">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/control_status_text"
            android:text="@string/bluetooth_status"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/control_status_text"
            android:layout_alignTop="@id/control_status_text"
            android:text="@string/status_disconnect"
            android:layout_marginRight="10dp"
            android:id="@+id/control_status"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/control_status"
            android:id="@+id/control_retry"
            android:text="@string/bluetooth_retry"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weight_text"
            android:text="@string/weight_default"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/control_status_text"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/battery_text"
            android:text="@string/battery_default"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/weight_text"
            android:layout_margin="5dp"/>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_title"
        android:text="@string/start_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/battery_text"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:textSize="30dp"/>


        <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/list_recipes"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_title"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/pane_recipe"
            android:layout_below="@id/text_title"
            android:visibility="gone"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/step_title"
                android:text="@string/loading"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:textSize="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/step_subtitle"
                android:text="@string/loading"
                android:layout_below="@id/step_title"
                android:layout_alignParentLeft="true"
                android:textSize="18dp"
                android:layout_marginLeft="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_cancel"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:text="@string/button_cancel"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_next"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/button_next"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/step_count"
                android:text="@string/loading"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_last"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:text="@string/button_last"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timer_view"
                android:layout_centerInParent="true"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timer"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/timer_timer"
                    android:textSize="100dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timer_start_toggle"
                    android:layout_alignRight="@id/timer"
                    android:layout_below="@id/timer"
                    android:text="@string/timer_start_start"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timer_reset"
                    android:layout_alignLeft="@id/timer"
                    android:layout_below="@id/timer"
                    android:text="@string/timer_reset"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scale_view"
                android:layout_centerInParent="true"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/weight_weight"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/loading"
                    android:textSize="100dp"/>

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/weight_seek"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/weight_weight"
                    android:clickable="false"
                    android:focusable="false"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/weight_marker"
                    android:layout_alignRight="@id/weight_seek"
                    android:layout_below="@id/weight_seek"
                    android:layout_marginRight="100dp"
                    android:text="@string/weight_marker"
                    android:textSize="24dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/weight_tare"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/weight_seek"
                    android:text="@string/weight_tare"/>
            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>